# client

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  readme.md  tsconfig.json
src/: BUILD.bazel  index.jsx  index.tsx  tsconfig.json
src/auth/: cli.jsx  cli.tsx  ui.jsx
src/clone/: BUILD.bazel  cmd.jsx  cmd.tsx
src/clone/create/: cmd.jsx  cmd.tsx  ui.jsx
src/clone/delete/: cmd.jsx  cmd.tsx
src/clone/describe/: cmd.jsx  cmd.tsx
src/clone/list/: cmd.jsx  cmd.tsx
src/clone/operations/: cmd.jsx  cmd.tsx
src/clone/operations/list/: cmd.jsx  cmd.tsx
src/clone/refresh/: cmd.tsx
src/database/: BUILD.bazel  cmd.jsx  cmd.tsx  ui.jsx  ui.tsx
src/database/backup/: cmd.jsx  cmd.tsx
src/database/backup/create/: cmd.tsx  ui.tsx
src/database/backup/list/: cmd.tsx  ui.tsx
src/database/pull/: cmd.jsx  cmd.tsx  ui.tsx
src/database/push/: cmd.jsx  cmd.tsx
src/database/restore/: cmd.jsx  cmd.tsx
src/files/: BUILD.bazel  cmd.jsx  cmd.tsx
src/files/backup/: cmd.tsx  ui.tsx
src/files/backup/create/: cmd.tsx
src/files/backup/list/: cmd.tsx  ui.tsx
src/files/describe/: cmd.jsx  cmd.tsx
src/files/pull/: cmd.jsx  cmd.tsx  ui.jsx  ui.tsx
src/files/push/: BUILD.bazel  cmd.jsx  cmd.tsx  ui.tsx
src/files/restore/: BUILD.bazel  cmd.tsx
src/internal/components/: JSONComponent.tsx
src/internal/config/: config.tsx
src/site/: BUILD.bazel  cmd.tsx
src/site/create/: cmd.tsx
src/site/delete/: cmd.tsx
src/site/describe/: cmd.tsx
src/site/exec/: cmd.tsx  ui.tsx
src/site/list/: cmd.tsx  ui.tsx
src/whoami/: cmd.jsx  cmd.tsx
src/workspace/: cmd.tsx
src/workspace/admin/: cmd.tsx
src/workspace/admin/add/: cmd.tsx
src/workspace/admin/delete/: cmd.tsx
src/workspace/developer/: cmd.tsx  ui.tsx
src/workspace/developer/add/: cmd.tsx
src/workspace/developer/delete/: cmd.tsx
src/workspace/list/: BUILD.bazel  cmd.tsx  ui.tsx
src/workspace/select/: cmd.tsx  ui.tsx
