package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library", "nodejs_binary", "nodejs_test")
load("@npm//@bazel/typescript:index.bzl", "ts_config")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/fru-io/platform",
)

exports_files(["tsconfig.json"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//:__subpackages__"],
)
