package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

# bazel run @nodejs//:yarn -- <arguments passed to yarn>

filegroup(
    name = "src",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

ts_project(
    name = "compile",
    srcs = glob(["*.tsx"]),
    preserve_jsx = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//src/files:lib",
        "@npm//:node_modules",
    ],
)
