package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["*.tsx"]),
    tags = ["build-target"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/files/backup:lib",
        "//src/files/describe:lib",
        "//src/files/pull:lib",
        "//src/files/push:lib",
        "//src/files/restore:lib",
        "@npm//:node_modules",
    ],
)
