package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["*.tsx"]),
    tags = ["build-target"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/auth:lib",
        "@npm//:node_modules",
    ],
)
